--- a/05-07-essay-text.html
+++ b/05-07-essay-text.html
@@ -21,7 +21,7 @@ layout: page
     <p class="text-bold">Die Entwicklung des Wissens ist eine, wenn nicht sogar die zentrale Aufgabe zukünftiger Stadtpolitik. Dies gilt nicht in traditionellen Universitätsstädten wie Leiden Delft, Oxford, Cambridge oder Heidelberg. Diese Aufgabe erfordert ein enges Zusammenwirken von im wesentlichen vier Gruppen der Gesellschaft: der Wirtschaft, der lokalen Hochschulen und Forschungsinstitute, der zivilen Gesellschaft, sowie von Politik und Veraltung der lokalen Rathäuser. Wie nehmen diese vier Gruppen Einfluss auf eine Stadtpolitik, die das Wissen in der Stadt weiter entwickeln möchte?</p>
     
 
-    <h2>Wissen ist der Treibstoff der Stadtentwicklung</h2>
+    <h2>Wissen ist der Treibstoff <br> der Stadtentwicklung</h2>
 
     <p>Wissen, so die Hoffnung der Wissensgesellschaft, ist der Motor der Stadtentwicklung, jedenfalls einer der Motoren der Stadtentwicklung. Doch im Grunde ist es das Wissen der lokalen Wirtschaft, der eine Stadt Arbeitsplätze und Wohlstand verdankt. Ohne eine gesunde und innovative Wirtschaft kann keine Stadt die Lebensqualität ihrer Bürger nachhaltig sichern. Doch ohne immer wieder erneuertes und weiter entwickeltes Wissen kann auch die lokale Wirtschaft diese Aufgabe nicht wahrnehmen. Es ist das Wissen vor Ort, aber auch Wissen, das sich die Akteure der lokalen Wirtschaft von außen holen, sei es über innovative Arbeitskräfte und unternehmensinterne Forschung, über Unternehmensberater, Fachmessen oder die Informationskanäle ihrer Verbände. Innovatives Wissen ist der Treibstoff, welcher der Wirtschaft einer Stadt ihre Wettbewerbsfähigkeit erhält. Dies gilt nicht nur für Universitätsstädte wie Heidelberg, Göttingen oder Oxford, die auf eine lange Tradition zurückblicken können. Es gilt auch für Städte, in denen Universitäten erst nach der Einsicht gegründet wurden, dass zur Bewältigung des strukturellen Wandels in der digitalen Welt innovative, besser ausgebildete Arbeitskräfte benötigt werden. Bochum, Augsburg, Linz oder Kaiserslautern sind dafür gute Beispiele.</p>
 
@@ -43,14 +43,14 @@ layout: page
 
 
 <!--  -->
-<section class="text-wrapper-topMargin base plain-text">
+<section class="text-wrapper base plain-text">
 
 
     <p>Während sich die lokalen Wissenseinrichtungen an einem Traditionsort der Aufmerksamkeit von Politik und Stadtbevölkerung sicher sein können, müssen sie sich diese an anderen, vor allem an metropolitanen Standorten mit vielen anderen Einrichtungen teilen.</p>
 
     <p>Stadtentwicklungsplanung hat die Bedürfnisse der Bürger einer Stadt und die ihrer lokalen Wirtschaft zu befriedigen. Den Belangen der lokalen Wissensindustrien schenkte die Kommunalpolitik früher aus unterschiedlichen Gründen wenig Aufmerksamkeit gefunden. Den teils lagen die Hochschulen und Forschungsinstitute in der Verantwortung übergeordneter Handlungsebenen, bisweilen hatten sich die dort tätigen Wissensarbeiter wenig um Stadtpolitik gekümmert. Dabei ist Stadtentwicklungsplanung auch Wissensentwicklungsplanung, so wie Kulturpolitik auch Stadtpolitik ist. Nur wenige Städte haben sich bislang darum bemüht, Wissen zum Gegenstand kommunal politischer Initiativen zu machen.</p>
 
-    <h2>Die Entwicklung des Wissens</h2>
+    <h2>Die Entwicklung  <br> des Wissens</h2>
 
     <h3>zentrale Aufgabe zukünftiger Stadtpolitik</h3>
 
@@ -58,7 +58,16 @@ layout: page
 
     <h3>die Hoffnung der Wissensgesellschaft</h3>
 
-    <p>Wissen, so die Hoffnung der Wissensgesellschaft, ist der Motor der Stadtentwicklung, jedenfalls einer der Motoren der Stadtentwicklung. Doch im Grunde ist es das Wissen der lokalen Wirtschaft, der eine Stadt Arbeitsplätze und Wohlstand verdankt. Ohne eine gesunde und innovative Wirtschaft kann keine Stadt die Lebensqualität ihrer Bürger nachhaltig sichern. Doch ohne immer wieder erneuertes und weiter entwickeltes Wissen kann auch die lokale Wirtschaft diese Aufgabe nicht wahrnehmen. Es ist das Wissen vor Ort, aber auch Wissen, das sich die Akteure der lokalen Wirtschaft von außen holen, sei es über innovative Arbeitskräfte und unternehmensinterne Forschung, über Unternehmensberater, Fachmessen oder die Informationskanäle ihrer Verbände. Innovatives Wissen ist der Treibstoff, welcher der Wirtschaft einer Stadt ihre Wettbewerbsfähigkeit erhält. Dies gilt nicht nur für Universitätsstädte wie Heidelberg, Göttingen oder Oxford, die auf eine lange Tradition zurückblicken können. Es gilt auch für Städte, in denen Universitäten erst nach der Einsicht gegründet wurden, dass zur Bewältigung des strukturellen Wandels in der digitalen Welt innovative, besser ausgebildete Arbeitskräfte benötigt werden. Bochum, Augsburg, Linz oder Kaiserslautern sind dafür gute Beispiele.</p>
+    <p>Wissen, so die Hoffnung der <span>Wissensgesellschaft,</span>  ist der Motor der Stadtentwicklung, jedenfalls einer der Motoren der Stadtentwicklung. Doch im Grunde ist es das Wissen der lokalen Wirtschaft, der eine Stadt Arbeitsplätze und Wohlstand verdankt. Ohne eine gesunde und innovative Wirtschaft kann keine Stadt die Lebensqualität ihrer Bürger nachhaltig sichern. Doch ohne immer wieder erneuertes und weiter entwickeltes Wissen kann auch die lokale Wirtschaft diese Aufgabe nicht wahrnehmen. Es ist das Wissen vor Ort, aber auch Wissen, das sich die Akteure der lokalen Wirtschaft von außen holen, sei es über innovative Arbeitskräfte und unternehmensinterne Forschung, über Unternehmensberater, Fachmessen oder die Informationskanäle ihrer <a href="#">Verbände</a> . Innovatives Wissen ist der Treibstoff, welcher der Wirtschaft einer Stadt ihre Wettbewerbsfähigkeit erhält. Dies gilt nicht nur für Universitätsstädte wie Heidelberg, Göttingen oder Oxford, die auf eine lange Tradition zurückblicken können. Es gilt auch für Städte, in denen Universitäten erst nach der Einsicht gegründet wurden, dass zur Bewältigung des strukturellen Wandels in der digitalen Welt innovative, besser ausgebildete Arbeitskräfte benötigt werden. Bochum, Augsburg, Linz oder Kaiserslautern sind dafür gute Beispiele.</p>
 
     <p>Während sich die lokalen Wissenseinrichtungen an einem Traditionsort der Aufmerksamkeit von Politik und Stadtbevölkerung sicher sein können, müssen sie sich diese an anderen, vor allem an metropolitanen Standorten mit vielen anderen Einrichtungen teilen. Stadtentwicklungsplanung hat die Bedürfnisse der Bürger einer Stadt und die ihrer lokalen Wirtschaft zu befriedigen. Den Belangen der lokalen Wissensindustrien schenkte die Kommunalpolitik früher aus unterschiedlichen Gründen wenig Aufmerksamkeit gefunden. Den teils lagen die Hochschulen und Forschungsinstitute in der Verantwortung übergeordneter Handlungsebenen, bisweilen hatten sich die dort tätigen Wissensarbeiter wenig um Stadtpolitik gekümmert. Dabei ist Stadtentwicklungsplanung auch Wissensentwicklungsplanung, so wie Kulturpolitik auch Stadtpolitik ist. Nur wenige Städte haben sich bislang darum bemüht, Wissen zum Gegenstand kommunal politischer Initiativen zu machen.</p>
+
+    <blockquote> Den Belangen der lokalen Wissensindustrien schenkte die Kommunalpolitik früher aus unterschiedlichen Gründen wenig Aufmerksamkeit gefunden. <span >Klaus R. Kunzmann</span></blockquote>
+
+    <p>Die Entwicklung des Wissens ist eine, wenn nicht sogar die zentrale Aufgabe zukünftiger Stadtpolitik. Dies gilt nicht in traditionellen Universitätsstädten wie Leiden Delft, Oxford, Cambridge oder Heidelberg. Diese Aufgabe erfordert ein enges Zusammenwirken von im wesentlichen vier Gruppen der Gesellschaft: der Wirtschaft, der lokalen Hochschulen und Forschungsinstitute, der zivilen Gesellschaft, sowie von Politik und Veraltung der lokalen Rathäuser. Wie nehmen diese vier Gruppen Einfluss auf eine Stadtpolitik, die das Wissen in der Stadt weiter entwickeln möchte?
+    </p>
+
+
+
+
 </section>
