--- a/_components/header-mediathek.html
+++ b/_components/header-mediathek.html
@@ -14,6 +14,8 @@ title: header-mediathek
             <button class="cta-small-white"> Heidelberg</button>
             <button class="cta-small-white">IBA_Lab</button>
         </div>
-        <p class=" c-black base-bold">Zahlreiche Videodokumentationen sind hier online zugänglich ... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
+        <div class="intro">
+            <p class=" c-black base-bold">Zahlreiche Videodokumentationen sind hier online zugänglich ... Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
+        </div>
     </article> 
 </div>
