--- a/_components/project-sponsores.html
+++ b/_components/project-sponsores.html
@@ -6,11 +6,11 @@ title: project-sponsores
     <h2 class="medium-uc-bold c-black center">Dieses Projekt wird unterstützt von:</h2>
     <div class="wrapper">
         <div class="logo-wrapper">
-        <img src="assets/images/sponsors/breer.jpg" alt="">
-        <img src="assets/images/sponsors/sparkasse-heidelberg.jpg" alt="">
-        <img src="assets/images/sponsors/epple.jpg" alt="">
-        <img src="assets/images/sponsors/euroboden.jpg" alt="">
-        <img src="assets/images/sponsors/deutsche-wohnewerte.jpg" alt="">
+        <img src="assets/images/sponsors/breer.png" alt="">
+        <img src="assets/images/sponsors/sparkasse-heidelberg.png" alt="">
+        <img src="assets/images/sponsors/epple.png" alt="">
+        <img src="assets/images/sponsors/euroboden.png" alt="">
+        <img src="assets/images/sponsors/deutsche-wohnwerte.png" alt="">
     </div>
     </div>
 </section>
