--- a/_menu/submenu-suche.html
+++ b/_menu/submenu-suche.html
@@ -4,8 +4,17 @@ title: submenu-suche
 
 <section class="sub-menu-container">
     <div class="wrapper">
-        
-            <input type="text"  class="input-suche " >
+            <div class="suche-input-container">
+            <input type="text"  class="input-suche ">
+                <button  class="cta-small-black input-suche-button">
+                        <svg width="32" height="32" viewBox="0 0 32 32" class="ikon-outline-suche" stroke="#fff">
+                                <path d="M11 19C15.4183 19 19 15.4183 19 11C19 6.58172 15.4183 3 11 3C6.58172 3 3 6.58172 3 11C3 15.4183 6.58172 19 11 19Z" />
+                                <path d="M21 20.9999L16.65 16.6499" />
+                        </svg>
+
+                </button>
+        </div>
+            
     </div>
 
 </section>
